<resources>
    <string name="app_name">Simple Money Manager</string>
    <string name="foodstuffs">Foodstuffs</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="balance">Balance</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="expense_rub">-%d ₽</string>
    <string name="positive_rub">%d ₽</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="add_new_transaction">Add new transaction</string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="delete">Delete</string>
    <string name="input_error">Field is empty</string>
    <string name="balance_error">Not enough money</string>
    <string name="empty_transaction_list">Transaction list is empty</string>
    <string name="edit">Edit</string>
    <string name="add_new_category_button">Add new category button</string>
    <string name="categories">Categories</string>
    <string name="add_new_category">Add new category</string>
    <string name="add_new_account">Add new account</string>
    <string name="no_category">No category</string>
    <string name="main_account_name">Main account</string>
    <string name="accounts">Accounts</string>
    <string name="account">Account</string>
    <string name="delete_account_title">Delete account %s?</string>
    <string name="delete_budget_title">Delete budget for %s category?</string>
    <string name="delete_account_dialog_description">You will lose all transactions associated with this account. Cannot be undone.</string>
    <string name="delete_budget_dialog_description">Cannot be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="choose_color">Choose color</string>
    <string name="current_balance">Current balance</string>
    <string name="cash_flow">Cashflow:</string>
    <string name="home">Home</string>
    <string name="budgets">Budgets</string>
    <string name="statistic">Statistic</string>
    <string name="total">Total:</string>
    <string name="income_this_month">Income this month</string>
    <string name="expense_this_month">Expense this month</string>
    <string name="transaction">transaction</string>
    <string name="transactions">transactions</string>
    <string name="budget_spend">%s/%s</string>
    <string name="left_to_spend">Left to spend:</string>
    <string name="limit_exceeded">Limit exceeded by:</string>
    <string name="state_of_budget">State of budget</string>
    <string name="add_new_budget">Add new budget</string>
    <string name="statistics">Statistics</string>
    <string name="transaction_list_is_empty">Transaction list is empty</string>
    <string name="add_some_transactions_to_see_statistics">Add some transactions to see statistics</string>
    <string name="filter">Filter</string>
    <string name="save_filter_button">Save filter button</string>
    <string name="month">Month</string>
    <string name="range">Range</string>
    <string name="by_month">By month</string>
    <string name="select_range">Select range</string>
    <string name="select_date">Select date</string>
    <string name="select_date_to_show_statistics">Select date to show statistics for</string>
    <string name="date">Date</string>
    <string name="overall">Overall</string>
</resources>