<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.AddCategoryDialogFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/account_add_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/account_add_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="6dp"
            android:paddingEnd="16dp"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_close"
            app:title="@string/add_new_account"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.Material3.TitleLarge.MyApp" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_account_name"
        style="@style/Widget.MyApp.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/account_add_appbar_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapSentences"
            android:textSize="24sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_account_balance"
        style="@style/Widget.MyApp.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:boxStrokeColor="@color/text_input_layout_container_color_selector"
        app:layout_constraintTop_toBottomOf="@+id/til_account_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_account_balance"
            android:layout_width="match_parent"
            android:hint="@string/balance"
            android:layout_height="wrap_content"
            android:digits="0123456789."
            android:inputType="number"
            android:textSize="24sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_choose_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/choose_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_account_balance" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_color">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:selectionRequired="true"/>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>