<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.fragments.StatisticFragment">

        <TextView
            android:id="@+id/tv_statistic_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistic"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_button_statistic_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:checkedButton="@id/button_income_statistic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_statistic_label"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/button_income_statistic"
                style="@style/Widget.App.Button.OutlinedButton.Income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income" />

            <Button
                android:id="@+id/button_expense_statistic"
                style="@style/Widget.App.Button.OutlinedButton.Expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pie_chart"
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:layout_height="500dp"
            app:layout_constraintTop_toBottomOf="@id/toggle_button_statistic_type"
            app:layout_constraintBottom_toTopOf="@id/rv_statistic_category"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_statistic_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pie_chart"
            tools:listitem="@layout/category_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>